# Plant-OS

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  README.md  a.c  build.plos  init.sh  make.py  project.yaml  xmake.lua
apps/: CMakeLists.txt  crt0.asm  crt0.c
apps/file/: CMakeLists.txt  main.c  project.yaml
apps/filereader/: CMakeLists.txt  main.c  project.yaml
apps/include/: CMakeLists.txt  zstd.h
apps/include/zstd/: zdict.h  zstd.h  zstd_errors.h
apps/pf/: CMakeLists.txt  main.c  project.yaml
apps/plui/: CMakeLists.txt  main.cpp  project.yaml
apps/testapp/: CMakeLists.txt  main.c  project.yaml
apps/testapp-cpp/: CMakeLists.txt  main.cpp  project.yaml
apps/zstd-test/: CMakeLists.txt  main.c  project.yaml
include/: CMakeLists.txt  algorithm.h  algorithm.hpp  asio.h  audio.h  base.h  config.h  cpu.h  data-structure.h  data-structure.hpp  define.h  define.hpp  elf.h  font.h  fs.h  img.h  kernel.h  ld-plos.h  libc++.hpp  libc-base.h  libc-base.hpp  libc.h  libplos.h  loader.h  magic.h  misc.h  mmio.h  pl2d.hpp  pl_readline.h  plac.h  plds.hpp  plic.h  plmp.h  plty.h  plui.hpp  sound.h  sys.h  type.h  ubscan.h  unitest.h
include/algorithm/: base.h  bm.h  kmp.h
include/audio/: plac.h
include/base/: asm.h
include/base/asm/: asm.h  cpuid.h  cr.h  reg.h
include/base/data-structure/: avltree.h  bitmap.h  circular-buffer.h  circular-queue.h  event.h  list.h
include/base/stdlib/: alloc.h
include/base/string/: mem.h
include/config/: data-structure.h  debug.h  plui.h  string-format.h  type-undef.h
include/data-structure/: array-list.h  avltree.h  base.h  bitmap.h  circular-buffer.h  circular-queue.h  event.h  list.h  list.hpp  mbitstream.h  mstream.h  queue-mt.h  queue.h  queue.hpp  rbtree-strptr.h  rbtree.h  rbtree.hpp  sized-event.h-  slist-strptr.h  slist.h  trie.h
include/data-structure/atomic/: event.h  queue-mt.h
include/data-structure/kernel/: kqueue.h
include/data-structure/ordered-map/: slist-strptr.h
include/data-structure/ordered-set/: array-list.h  bitmap.h  circular-buffer.h  circular-queue.h  event.h  list.h  list.hpp  mbitstream.h  mstream.h  queue-mt.h  queue.h  sized-event.h-  slist.h
include/data-structure/sorted-map/: avltree.h  rbtree-strptr.h  rbtree.h  rbtree.hpp  trie.h
include/data-structure/unordered-map/: st.h
include/define/: CMakeLists.txt  config.h  define.h  postfix.hpp  type.h  type.hpp
include/define/config/: alloc.h  check.h  data-structure.h  log.h  plos.h  plui.h  type-undef.h  undef.h
include/define/define/: 00-include.h  00-include.hpp  assert.h  assert.hpp  attribute.h  base.h  int.h  log.h  logging.h  magic.h  mem.h  new.h  rc.h  va.h
include/define/type/: 00-include.hpp  atom-func.h  atom-lockfree.h  atom-type.h  atom.h  base.h  bool.h  char.h  complex.h  const.h  ex.h  func.h  int.h  limit.h  type.h  type.hpp  type_traits  type_traits.hpp  vector.h
include/font/: font.h  plff.h
include/fs/: fs.h  include-libc.h  vfs.h
include/img/: qoi.h
include/kernel/: 00-include.h  8295a.h  acpi.h  ahci.h  assert.h  cpu.h  dma.h  elf.h  fat.h  fdc.h  hda.h  ipc.h  lock.h  log.h  logging.h  mem.h  mouse_n_kbd.h  mtask.h  os.h  page.h  pci.h  ps2.h  random.h  resman.h  sb16.h  screen.h  shared.h  sound.h  syscall.h  timer.h  todo_fifo8.h  tty.h  vbe.h  vdisk.h  vfs.h  virtio.h  vmtools.h  vsound.h
include/kernel/logging/: default  ext
include/kernel/task/: kernel-part  user-part
include/libc/: CMakeLists.txt  asm.h  color.h  include.h  math.h  xtoa.h
include/libc++/: include.hpp
include/libc-base/: 00-include.hpp  CMakeLists.txt  arg.h  asm.h  color.h  crypto.h  errno.h  error.h  error.hpp  exch.hpp  include.h  include.hpp  rc.hpp  time.h
include/libc-base/asm/: asm.h  cpuid.h  cr.h  flags.h  flush.h  io.h  mem.h  msr.h  reg.h  syscall-x64  syscall-x86  syscall-x86-sysenter  syscall.h
include/libc-base/crypto/: hash.h
include/libc-base/data-structure/: avltree.h  bitmap.h  queue-mt.h  slist.h
include/libc-base/math/: base.h  base.hpp  bits.h  bits.hpp  exp-log.h  exp-log.hpp  float.h  i64-div.h  math.h  math.hpp  sin.h  sin.hpp  sqrt.h  sqrt.hpp  sum.hpp
include/libc-base/stdio/: print.h
include/libc-base/stdlib/: alloc.h  atox.h  lib.h  rand.h  xtoa.h
include/libc-base/string/: alloc.h  mem.h  path.h  str.h
include/libc-base/thread/: rwlock.h  spin.h
include/libc/asm/: asm.h  cpuid.h  (+6 more)
include/loader/: 8295a.h  ahci.h  base.h  cpu.h  dma.h  dosldr.h  elf.h  fdc.h  file.h  ide.h  list.h  mem.h  mstr.h  pci.h  pfs.h  screen.h  stddef.h  str.h  tsk.h  vdisk.h
include/misc/: 00-include.h  00-include.hpp  color.h  file.h  string.hpp
include/pl2d/: 00-include.hpp  CMakeLists.txt  cache.hpp  fb.h  fb.hpp  matrix.hpp  pixel.hpp  point.hpp  points.hpp  texture.hpp
include/plac/: plac.h
include/plds/: base.hpp  client.hpp  server.hpp
include/plmp/: mpi32.h  mpi32.hpp  mpi64.h
include/plty/: fb.h  plty.h
include/plui/: element.hpp  event.hpp  pos.hpp  wnd.hpp
include/sound/: fmt.h  fmtconv.h  mix.h
include/stdinc/: emmintrin.h  mmintrin.h
include/sys/: osapi.h  plos-syscall.h  syscall.h  task-user-part.h
include/uefi/: uefi.h
src/kernel/: CMakeLists.txt  alloc.c  cyg-profile.c  kernel-md5.h  kernel-mt19937.h  main.c  make.py  random.c  ubscan.c
src/ld-plos/: CMakeLists.txt  ld-plos.c  ld-plos.h  sysfn.h
src/loader/: CMakeLists.txt  README.md  make.py  ubscan.c
src/misc/: CMakeLists.txt  file.c
test/: CMakeLists.txt  audio.c  fib.c  gaussian-kernel.cpp  ima-adpcm.c  plmp.c  plmp.cpp  pow.cpp  test  test.c
test/algs/: CMakeLists.txt  kmp.cpp
test/c/: CMakeLists.txt  avltree-bench.cpp  localtime.c  rbtree-bench.cpp  rbtree-test.cpp  rbtree.c  rbtree.cpp  st.cpp  string-search.c
test/cpp/: CMakeLists.txt  rbtree-bench.cpp  rbtree.cpp  string.cpp
test/math/: CMakeLists.txt  bench.cpp  pow.cpp
test/misc/: CMakeLists.txt  fft.cpp  hash.cpp
test/plac/: CMakeLists.txt  audio.c  plac-encoder.c  plac-player.c
test/plui/: CMakeLists.txt  file.h  main.c  main.cpp  qoi.c  qoi.h
util/: CMakeLists.txt  alloc.c  crc-table.c  plff.c  src.cmake
(+536 files in other folders)
