mkheader_recurse(config)
mkheader_recurse(libc-base)
mkheader_recurse(data-structure)
mkheader_recurse(misc)
mkheader_recurse(libc)
mkheader_hpp_recurse(libc++)
mkheader_recurse(kernel)
mkheader_recurse(loader)
mkheader_recurse(plty)
mkheader_recurse(fs)
mkheader_recurse(sys)
add_subdirectory(libc)
add_subdirectory(libc++)
add_subdirectory(kernel)
add_subdirectory(loader)
