mkheader_h_recurse(define)
mkheader_hpp_recurse(define)
mkheader_h_recurse(libc-base)
mkheader_hpp_recurse(libc-base)
mkheader_h_recurse(data-structure)
mkheader_hpp_recurse(data-structure)
mkheader_recurse(misc)
mkheader_recurse(libc)
mkheader_hpp_recurse(libc++)
mkheader_recurse(kernel)
mkheader_recurse(loader)
mkheader_recurse(plty)
mkheader_recurse(fs)
mkheader_recurse(sys)
add_subdirectory(define)
