mkheader_h_recurse(define)
mkheader_hpp_recurse(define)
mkheader_h_recurse(libc-base)
mkheader_hpp_recurse(libc-base)
mkheader_h_recurse(data-structure)
mkheader_hpp_recurse(data-structure)
mkheader_h_recurse(algorithm)
mkheader_hpp_recurse(algorithm)
mkheader_recurse(misc)
mkheader_recurse(libc)
mkheader_hpp_recurse(libc++)
mkheader_recurse(kernel)
mkheader_recurse(loader)
mkheader_recurse(plty)
mkheader_recurse(fs)
mkheader_recurse(plic)
mkheader_recurse(font)
mkheader_recurse(sys)
mkheader_recurse(plmp)
mkheader_hpp_recurse(pl2d)
mkheader_hpp_recurse(plds)
mkheader_hpp_recurse(plui)
mkheader_recurse(audio)
add_subdirectory(define)
add_subdirectory(pl2d)
add_subdirectory(plds)
mkheader_recurse(sound)
